Fix alignment icons

--- a/scss/partials/components/_buttons.scss
+++ b/scss/partials/components/_buttons.scss
@@ -212,3 +212,7 @@ input[type="range"]::-ms-thumb {
   }
 
 }
+
+button.button.button--primary.noMargin.noPadding.d-none.d-md-block {
+  background-color: #FE9920;
+}
